[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/ModernDOS9x16.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/mainMenu/skybox.png" type="Texture" id=3]
[ext_resource path="res://sprites/mainMenu/treeLayers.png" type="Texture" id=4]
[ext_resource path="res://objects/Transition.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/game_chars/pump_boi/pumpBoiTeen.png" type="Texture" id=6]
[ext_resource path="res://sprites/game_chars/tankman/tankman.png" type="Texture" id=7]
[ext_resource path="res://sprites/game_chars/tas/tas.png" type="Texture" id=8]
[ext_resource path="res://sprites/game_chars/pump_boi/pumpBoi.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=2]
resource_name = "walkin"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 47 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 47 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 47 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite4:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 47 ]
}

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_top = 408.0
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Sky"]
modulate = Color( 0.592157, 0.478431, 1, 1 )
scale = Vector2( 3.2, 3.125 )
texture = ExtResource( 3 )
centered = false

[node name="TreeFarFarFar" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/TreeFarFarFar"]
position = Vector2( -16, 176 )
scale = Vector2( 3.2, 3.125 )
texture = ExtResource( 4 )
centered = false
vframes = 3
frame = 2

[node name="TreeFarFar" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/TreeFarFar"]
modulate = Color( 0.34902, 0.054902, 1, 1 )
position = Vector2( 8, 200 )
scale = Vector2( 3.2, 3.125 )
texture = ExtResource( 4 )
centered = false
vframes = 3
frame = 1

[node name="TreeFar" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/TreeFar"]
modulate = Color( 0.427451, 0.2, 0.92549, 1 )
position = Vector2( -8, 224 )
scale = Vector2( 3.2, 3.125 )
texture = ExtResource( 4 )
centered = false
vframes = 3

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 424, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
hframes = 15
vframes = 15
frame = 46

[node name="Sprite2" type="Sprite" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 344, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
hframes = 15
vframes = 15
frame = 46

[node name="Sprite3" type="Sprite" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 256, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
hframes = 15
vframes = 15
frame = 46

[node name="Sprite4" type="Sprite" parent="Control"]
modulate = Color( 0, 0, 0, 0.109804 )
position = Vector2( 176, 376 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
hframes = 15
vframes = 15
frame = 46

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
anims/walkin = SubResource( 2 )

[node name="Play" type="RichTextLabel" parent="."]
margin_left = 800.0
margin_top = 336.0
margin_right = 1075.0
margin_bottom = 355.0
rect_scale = Vector2( 2.5, 2.5 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Play"
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="RichTextLabel" parent="."]
margin_left = 800.0
margin_top = 376.0
margin_right = 1120.0
margin_bottom = 395.0
rect_scale = Vector2( 2.5, 2.5 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Credits"
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="RichTextLabel" parent="."]
margin_left = 800.0
margin_top = 416.0
margin_right = 1142.0
margin_bottom = 435.0
rect_scale = Vector2( 2.5, 2.5 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Controls"
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="RichTextLabel" parent="."]
margin_left = 800.0
margin_top = 456.0
margin_right = 1158.0
margin_bottom = 475.0
rect_scale = Vector2( 2.5, 2.5 )
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "Exit"
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 568.0
margin_right = 156.0
margin_bottom = 587.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Cancelled Update"
text = "Cancelled Update"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition" parent="." instance=ExtResource( 5 )]
